- Fixed issues:
	NX-183 (Implemented responsible users for objects)
	NX-900 (Server started during nxdbmgr check forced repair)
	NX-1102 (Implement event groups)
	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)


*
* 2.2.5
*

- Fixed issues:
	NX-1418 (Sort scripts in Execute Server Script dropdown)
	NX-1420 (Do not use unmanaged devices with SNMP for MAC resolving)
	NX-1421 (Configuration poll for node without SNMP and agent always read ARP cache from all SNMP devices in subnet)


*
* 2.2.4
*

- Portech SMS gateway works correctly with newer gateway versions
- Fixed issues:
	NX-1208 (Added filter to alarm list)
	NX-1295 (MIB Walk from DCI missing Column)
	NX-1332 (Execution timeout for external parameter provider)
	NX-1337 (Map link color based on object status)
	NX-1346 (Unable to select template group on config export)
	NX-1400 (NetworkMap link can be locked when using bendpoints)
	NX-1403 (Setting floor plan view from right-click menu does not work)
	NX-1404 (No source node in events generated by syslog parser)
	NX-1405 (Agent may crash when parsing Windows event log message)
	NX-1408 (Object filtering by zone in object browser and object search form)
	NX-1411 (Server configuration option "UseInterfaceAliases" not working)
	NX-1413 (Agent may crash when processing external parameters provider's output)


*
* 2.2.3
*

- Additional information about captured Windows Event Log event passed to the server
- Improved server startup time
- Automatic termination of related alarms when DCI is deleted
- Added attribute "isSTP" to NXSL class "Node"
- File I/O functions in NXSL (disabled by default)
- Sub-second interval between packets can be configured in PING subagent (down to 10 milliseconds)
- Fixed issues:
	NX-1149 (Pass EventRecordID with matched Windows event log record)