@@ -52,14 +52,6 @@
 #include <locale.h>
 #endif
 
-#ifdef _WIN32
-# ifndef __GNUC__
-#  define EPOCHFILETIME (116444736000000000i64)
-# else
-#  define EPOCHFILETIME (116444736000000000LL)
-# endif
-#endif
-
 /**
  * Common initialization for any NetXMS process
  *
